--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,12 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+
+    <script type="text/javascript">
+        window.logoURL = "<%= image_url('icon-sprite8.svg') %>"
+        
+  </script>
+
   </head>
 
   <body>
