--- a/app/assets/stylesheets/splash.css
+++ b/app/assets/stylesheets/splash.css
@@ -27,3 +27,51 @@
     min-height: 70px;
     padding: 0 40px;
 }
+
+.langlogin {
+    align-items: center;
+    display: -ms-flexbox;
+    display: flex;
+    float: right;
+    margin-top: 5px;
+}
+
+.langlogin-container {
+    display: flex;
+    float: right;
+    align-items: center;
+}
+
+.site-lang {
+    cursor: pointer;
+    font-family: din-round,sans-serif!important;
+    padding: 20px;
+    position: relative;
+    color: #fff;
+    align-items: center;
+    display: flex;
+    float: right;
+    margin-top: 5px;
+}
+.login-button-div{
+    position: relative;
+    text-align: center;
+}
+
+.login-button{
+    border-color: rgb(216, 216, 216) rgb(209, 209, 209) rgb(186, 186, 186);
+    border-style: solid;
+    /* border-width: 1px; */
+    /* padding: 1px 7px 2px; */
+    border-width: 0 0 4px;
+    /* border-color: transparent; */
+    /* border-top-left-radius: 18px; */
+    border-radius: 18px;
+    padding: 13px 16px;
+
+    color: #0b3e71!important;
+    font-size: 12px; 
+    font-weight: 700; 
+     letter-spacing: .8px; 
+    text-transform: uppercase;
+}
