add four languages

--- a/app/assets/stylesheets/register.css
+++ b/app/assets/stylesheets/register.css
@@ -84,3 +84,6 @@
     font-size: 14px;
 }
 .spanish-span{ background-position: 0 -32.19512px;}
+.french-span{ background-position: 0 -64.39024px;}
+.german-span{ background-position: 0 -96.58537px;}
+.japanese-span {     background-position: 0 -128.78049px;}
