--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <% if logged_in? %>
       <script type="text/javascript">
           window.currentUser =
-            <%= render("api/users/user.json.jbuilder", user: current_user).html_safe %>
+            <%= render("api/user/user.json.jbuilder", user: current_user).html_safe %>
       </script>
     <% end %>
     
