--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -157,7 +157,7 @@
 .dashboard-body {
     cursor: default;
     margin: 94px auto 0!important;
-    max-width: 91%;
+    max-width: 1140px;
     min-width: 900px;
 }
 .dashboard-body-right-side {
