--- a/app/assets/stylesheets/courseContent.css
+++ b/app/assets/stylesheets/courseContent.css
@@ -62,9 +62,7 @@
     width: 72px;
     border-radius: 98px;
     display: inline-block;
-    height: 62px;
     margin: 8px 0 25px;
-    width: 62px;
     cursor: pointer;
 }
 
@@ -81,8 +79,8 @@
     position: absolute;
     right: -24px;
     color: transparent;
-    height: 100%;
-    width: 100%;
+    height: 50px;
+    width: 50px;
     z-index: 1;
 }
 .course-crown-image {
@@ -90,4 +88,15 @@
     height: 100%;
     width: 100%;
     z-index: 1;
+}
+.lesson-progress-rings {
+        left: calc(50% - 90px / 2);
+    margin-left: -8px;
+    top: -8px;
+    z-index: 0;
+    position: absolute;
+    color: #999;
+    display: inline-block;
+    font-size: 15px;
+    text-align: center;
 }
