--- a/app/assets/stylesheets/courseContent.css
+++ b/app/assets/stylesheets/courseContent.css
@@ -84,13 +84,13 @@
     /* z-index: 1; */
 }
 .course-crown-image {
-        color: transparent;
+    color: transparent;
     height: 100%;
     width: 100%;
     /* z-index: 1; */
 }
 .lesson-progress-rings {
-        left: calc(50% - 90px / 2);
+    left: calc(50% - 90px / 2);
     margin-left: -8px;
     top: -8px;
     z-index: 0;
@@ -99,6 +99,7 @@
     display: inline-block;
     font-size: 15px;
     text-align: center;
+    cursor: pointer;
 }
 
 .bscs1{
