--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,9 @@
  *= require_tree .
  *= require_self
  */
-
+* {
+    font-family: din-round,sans-serif!important;
+}
 .body {
     background: #fff;
     
