files for lang controller

--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -47,6 +47,7 @@
         display: table-row;
 }
 .login-modal-label input {
+    outline: none;
     padding: 8px 0 8px 20px;
     width: 100%;
     background: transparent!important;
@@ -77,6 +78,7 @@
     letter-spacing: .8px;
     text-transform: uppercase;
     cursor: pointer;
+    outline: none;
 }
 /* The Close Button */
 .close-login {
