--- a/app/assets/stylesheets/register.css
+++ b/app/assets/stylesheets/register.css
@@ -15,6 +15,7 @@
     padding: 40px;
     text-align: center;
     font-family: din-round,sans-serif!important;
+    outline: none!important;
     -webkit-tap-highlight-color: transparent;
 }
 .register-inner-box{
