finish skill header component

--- a/app/assets/stylesheets/lesson.css
+++ b/app/assets/stylesheets/lesson.css
@@ -15,3 +15,62 @@
     min-height: 590px;
     padding: 0;
 }
+.skill-header-container {
+    z-index: 200;
+}
+.skill-header-content-frame {
+        height: 80px;
+    padding-top: 40px;
+        padding: 50px 40px 0;
+            display: flex;
+    height: 40px;
+    margin: auto;
+    max-width: 1080px;
+    position: relative;
+}
+.skill-x-button {
+    left: 40px;
+    position: absolute;
+    background-position: -373px -153px;
+    height: 18px;
+    width: 18px;
+    background-image: url(//d35aaqx5ub95lt.cloudfront.net/images/icon-sprite8.svg);
+    display: inline-block;
+    vertical-align: middle;
+}
+.skill-progress-button{
+    flex-grow: 1;
+}
+.skill-progress-container-anon {
+        margin: 0 0 0 40px;
+    position: relative;
+}
+.skill-progress-container {
+    border-radius: 98px;
+    height: 16px;
+        background: #e5e5e5;
+    position: absolute;
+    width: 100%;
+}
+.skill-progress-green {
+    opacity: 0;
+    width: 0%;
+        background: #78c800;
+    min-width: 16px;
+    position: relative;
+    transition: all .5s;
+    z-index: 1;
+        border-radius: 98px;
+    height: 16px;
+}
+.skill-progress-green::after {
+        background: #fff;
+    border-radius: 98px;
+    content: "";
+    display: block;
+    height: 5px;
+    margin: 0 10px 0 15px;
+    opacity: .2;
+    transform: translate3d(0,4px,0);
+
+}
