--- a/app/assets/stylesheets/lesson.css
+++ b/app/assets/stylesheets/lesson.css
@@ -174,6 +174,11 @@
     display: inline-block;
 }
 
+.challenge-sentence {
+    color: #3c3c3c;
+    font: 500 17px/20px sans-serif;
+    line-height: 39px;    
+}
 
 /* Footer */
 
